# TheAgentCompany-lite

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: e2e-test.yml  macos-ci.yml  publish-base-image.yml
docs/: DESIGN.md  SETUP.md
evaluation_lite/: harness.py  run_eval.py  run_eval_mock.py  scheduler.py  service_manager.py
